Refactor the scripts and networks

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "test": "hardhat test",
     "node:dev": "hardhat node",
     "deploy:localhost": "hardhat run --network localhost scripts/deploy.ts",
-    "deploy:hmnd-local": "hardhat run --network hmnd-local scripts/deploy.ts",
-    "deploy:testnet5": "hardhat run --network testnet5 scripts/deploy.ts"
+    "deploy:humanode:local": "hardhat run --network humanode-local scripts/deploy.ts",
+    "deploy:humanode:testnet5": "hardhat run --network humanode-testnet5 scripts/deploy.ts"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3"
