--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "test": "hardhat test",
+    "flatten": "hardhat flatten",
     "node:dev": "hardhat node",
     "deploy:localhost": "hardhat run --network localhost scripts/deploy.ts",
     "deploy:humanode:local": "hardhat run --network humanode-local scripts/deploy.ts",
